--- a/projekt/projekt/Views/Meals/MyMeals.cshtml
+++ b/projekt/projekt/Views/Meals/MyMeals.cshtml
@@ -30,11 +30,16 @@
 
 </style>
 
-    <div>
+<div class="btn-group">
+    <a asp-controller="Home" asp-action="Index">
+        <span class="btn btn-sm btn-outline-primary">
+            <i class="fa fa-arrow-left"></i>
+        </span>
+    </a>
     <a asp-action="AddingMeals">
         
             <span class="btn btn-sm btn-outline-primary">
-                <i class="fa fa-plus" style="color: #52b94b;"></i>
+                <i class="fa" style="color: #52b94b;">DODAJ</i>
             </span>
         </a>
     </div>
