basic basic darkmode

--- a/projekt/projekt/Views/Home/Privacy.cshtml
+++ b/projekt/projekt/Views/Home/Privacy.cshtml
@@ -5,9 +5,9 @@
 
 <p>Strona stwożona jako projekt na "programowanie obiektowe i graficzne" oraz "bazy danych" przez
     <ul>
-        <li>Pawła Cykowskiego</li>
-        <li>Wojciecha Dziurosza</li>
-        <li>Bartosza Skurę</li>
-        <li>Pawła Wójcika</li>
+        <li>Paweł Cykowski</li>
+        <li>Wojciech Dziurosz</li>
+        <li>Bartosz Skura</li>
+        <li>Paweł Wójcik</li>
     </ul>
 </p>
