--- a/projekt/projekt/Views/Account/Index.cshtml
+++ b/projekt/projekt/Views/Account/Index.cshtml
@@ -60,5 +60,5 @@
     
     </div>
 
-<a asp-controller="Meals" asp-action="MyMeals">zobacz wszytkie włąsne posiłki</a>
+<a asp-controller="Meals" asp-action="MyMeals">zobacz wszytkie swoje posiłki</a>
 <a asp-controller="UserMeals" asp-action="AddExistingMeal" asp-route-id="@date.ToString()">Dodaj brakujący posiłek</a>
