--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -7,16 +7,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - projekt</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/projekt.styles.css" asp-append-version="true" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
+    <!-- jQuery library -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
 
+    <!-- Popper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    
     <style>
         .list {
             display: none;
             position: absolute;
-            background-color: white;
             padding: 5px;
             z-index: 1;
         }
@@ -29,12 +37,15 @@
         ul {
             list-style-type: none;
         }
+        .dark-mode{
+            color:rgba(255,255,255,.87);
+            background:#121212;
+        }
     </style>
-
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">projekt</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -45,33 +56,38 @@
                     <ul class="navbar-nav flex-grow-1">
                        @if (User.Identity.IsAuthenticated){
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Index">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</a>
+                                <a class="nav-link text-black" asp-controller="Account" asp-action="Index">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</a>
                             </li>
                             <li class="nav-item">
-                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Wyloguj</a>
+                                 <a class="nav-link text-black" asp-controller="Account" asp-action="Logout">Wyloguj</a>
                             </li>
 
                             <li class="nav-item" style="position: relative;">
-                                <a class="nav-link text-dark">Posiłki</a>
+                                <a class="nav-link text-black">Posiłki</a>
                                 <ul class="list">
-                                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="MyMeals">Moje</a></li>
-                                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="Products">Produkty</a></li>
+                                    <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="MyMeals">Moje</a></li>
+                                    <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="Products">Produkty</a></li>
                                 </ul>
                                 
                              </li>
                         }
                         else{
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Start</a>
+                                <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index">Start</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Informacje</a>
+                                <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Privacy">Informacje</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Zaloguj się</a>
+                                <a class="nav-link text-black" asp-area="" asp-controller="Account" asp-action="Login">Zaloguj się</a>
                             </li>
                         }
+                        
                     </ul>
+                    <div class="custom-control custom-switch mr-5">
+                        <input type="checkbox" class="custom-control-input theme-toggle save-cb-state" name="mycheckbox" value="yes" id="theme-toggle" onclick="themeToggle()" />
+                        <label class="custom-control-label" for="theme-toggle">Tryb Ciemny</label>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -81,7 +97,84 @@
             @RenderBody()
         </main>
     </div>
+    <script>
+        (function () {
+            // variable to store our current state
+            var cbstate;
 
+            // bind to the onload event
+            window.addEventListener('load', function () {
+                // Get the current state from localstorage
+                // State is stored as a JSON string
+                cbstate = JSON.parse(localStorage['CBState'] || '{}');
+
+                // Loop through state array and restore checked
+                // state for matching elements
+                for (var i in cbstate) {
+                    var el = document.querySelector('input[name="' + i + '"]');
+                    if (el) el.checked = true;
+                }
+
+                // Get all checkboxes that you want to monitor state for
+                var cb = document.getElementsByClassName('save-cb-state');
+
+                // Loop through results and ...
+                for (var i = 0; i < cb.length; i++) {
+
+                    //bind click event handler
+                    cb[i].addEventListener('click', function (evt) {
+                        // If checkboxe is checked then save to state
+                        if (this.checked) {
+                            cbstate[this.name] = true;
+                        }
+
+                        // Else remove from state
+                        else if (cbstate[this.name]) {
+                            delete cbstate[this.name];
+                        }
+
+                        // Persist state
+                        localStorage.CBState = JSON.stringify(cbstate);
+                    });
+                }
+            });
+        })();
+        var tSwitcher = document.querySelectorAll("[class^=theme-switcher]");
+        let element = document.body, onpageLoad = localStorage.getItem("theme") || "";
+        if (null != onpageLoad && "dark-mode" == onpageLoad)
+            for (let e = 0; e < tSwitcher.length; e++)tSwitcher[e].checked = !0;
+            function themeToggle() {
+                event.target.checked ? (localStorage.setItem("theme", "dark-mode"), tSwitcher.forEach(function (e) {
+                    element.classList.add("dark-mode"), e.checked = !0 
+                })) : (localStorage.setItem("theme", ""), tSwitcher.forEach(function (e) {
+                    element.classList.remove("dark-mode"), e.checked = !1 })) 
+            } onpageLoad && element.classList.add(onpageLoad);
+            (function () {
+                let onpageLoad = localStorage.getItem("theme") || "";
+                let element = document.body;
+                element.classList.add(onpageLoad);
+                document.getElementById("theme").textContent =
+                    localStorage.getItem("theme") || "light";
+            })();
+
+        function themeToggle() {
+            let element = document.body;
+            element.classList.toggle("dark-mode");
+
+            let theme = localStorage.getItem("theme");
+            if (theme && theme === "dark-mode") {
+                localStorage.setItem("theme", "");
+            }
+            else {
+                localStorage.setItem("theme", "dark-mode");
+            }
+
+            document.getElementById("theme").textContent = localStorage.getItem("theme");
+        
+        }
+
+        
+    </script>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - projekt - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -90,6 +183,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
