--- a/projekt/projekt/Views/Meals/MyMeals.cshtml
+++ b/projekt/projekt/Views/Meals/MyMeals.cshtml
@@ -36,11 +36,11 @@
             <i class="fa fa-arrow-left"></i>
         </span>
     </a>
-    <a asp-action="AddingMeals">
+    
+    <a asp-action="Create" class="btn btn-success">
+        Utwórz nowy
         
-            <span class="btn btn-sm btn-outline-primary">
-                <i class="fa" style="color: #52b94b;">DODAJ</i>
-            </span>
+            
         </a>
     </div>
 
