--- a/projekt/projekt/Views/Account/Index.cshtml
+++ b/projekt/projekt/Views/Account/Index.cshtml
@@ -61,3 +61,4 @@
 
 <a asp-controller="Meals" asp-action="MyMeals">zobacz wszytkie swoje posiłki</a>
 <a asp-controller="UserMeals" asp-action="AddExistingMeal" asp-route-id="@date.ToString()">Dodaj brakujący posiłek</a>
+<a asp-controller="Date" asp-action="WeekMeals">Zobacz posumowanie tygodnia</a>
