działające proste tworzenie posiłków
posiłki na razie mogą mieć po jednej sztuce każdego składnika, nie ma podglądu podczas tworzenia składu, lista posiłków z jakiegoś powodu nie działa

--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
                                 <a class="nav-link text-black">Posiłki</a>
                                 <ul class="list">
                                     <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="MyMeals">Moje</a></li>
+                                    <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="NameMeal">Dadaj posiłek</a></li>
                                     <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="Products">Produkty</a></li>
                                 </ul>
                                 
