--- a/projekt/projekt/wwwroot/css/site.css
+++ b/projekt/projekt/wwwroot/css/site.css
@@ -16,3 +16,82 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.list {
+    display: none;
+    position: absolute;
+    padding: 5px;
+    z-index: 2;
+    width: fit-content;
+    background-color: #17a2b8;
+}
+
+
+li:hover .list {
+
+    transition: 0.5s;
+    display: block;
+}
+
+ul {
+    list-style-type: none;
+}
+
+
+.dark-mode {
+    color: rgba(255,255,255,.87)!important;
+    background: #343a40!important;
+}
+
+#dark-toggle{
+    align-self:flex-end;
+}
+.meal-info{
+    display:none;
+}
+.meal-info.show{
+    display:block;
+}
+.table-head .danie {
+    float:left;
+    position: relative;
+    width: 90%;
+    margin: 0;
+    padding: 0;
+    border:none;
+    outline:none;
+}
+.table-head .remove {
+    float:right;
+    position: relative;
+    width: 10%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
+ .remove :last-of-type{
+}
+.day-table {
+    margin: 10px;
+    float: left;
+    position: relative;
+    width: max(40%,300px);
+    min-height: 400px;
+}
+.remove a{
+    position:relative;
+    width:100%;
+    height:100%;
+
+}
+#daily-summ {
+    margin:10px;
+    float:right;
+    position: relative;
+    width: max(40%,300px);
+}
+.bottom-nav{
+    width:100%;
+    display:inline-block;
+}
