--- a/projekt/projekt/Views/Meals/CreateMeal.cshtml
+++ b/projekt/projekt/Views/Meals/CreateMeal.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Produkt>
 @{
     ViewData["Title"] = "CreateMeal";
-    TempData["id"] = ViewData["nazwa"];
+   // TempData["id"] = ViewData["nazwa"];
 }
 
 <h1>CreateMeal</h1>
