--- a/projekt/projekt/wwwroot/css/site.css
+++ b/projekt/projekt/wwwroot/css/site.css
@@ -1,20 +1,21 @@
+@import "account.css";
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .list {
@@ -26,9 +27,7 @@ body {
     background-color: #17a2b8;
 }
 
-
 li:hover .list {
-
     transition: 0.5s;
     display: block;
 }
@@ -39,59 +38,11 @@ ul {
 
 
 .dark-mode {
-    color: rgba(255,255,255,.87)!important;
-    background: #343a40!important;
+    color: rgba(255,255,255,.87) !important;
+    background: #343a40 !important;
 }
 
-#dark-toggle{
-    align-self:flex-end;
+#dark-toggle {
+    align-self: flex-end;
 }
-.meal-info{
-    display:none;
-}
-.meal-info.show{
-    display:block;
-}
-.table-head .danie {
-    float:left;
-    position: relative;
-    width: 90%;
-    margin: 0;
-    padding: 0;
-    border:none;
-    outline:none;
-}
-.table-head .remove {
-    float:right;
-    position: relative;
-    width: 10%;
-    margin: 0;
-    padding: 0;
-    border: none;
-    outline: none;
-}
- .remove :last-of-type{
-}
-.day-table {
-    margin: 10px;
-    float: left;
-    position: relative;
-    width: max(40%,300px);
-    min-height: 400px;
-}
-.remove a{
-    position:relative;
-    width:100%;
-    height:100%;
 
-}
-#daily-summ {
-    margin:10px;
-    float:right;
-    position: relative;
-    width: max(40%,300px);
-}
-.bottom-nav{
-    width:100%;
-    display:inline-block;
-}
